--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.4.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-globe.gl": "^2.27.2"
+    "react-globe.gl": "^2.27.2",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
